# win-tools

./: CMakeLists.txt  readme.md
term/: term.cpp  term.h
tools/: cd.cpp  ls.cpp  mkdir.cpp  mkfile.cpp  processlist.cpp
utils/: processutils.cpp  stringutils.cpp  utils.h
